--- a/app/src/main/res/layout/fragment_employee_item.xml
+++ b/app/src/main/res/layout/fragment_employee_item.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:paddingTop="8dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:layout_centerVertical="false"
     android:id="@+id/fragment_employee_item"
     android:layout_height="72dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:theme="@style/AppTheme"
+    android:animateLayoutChanges="true">
 
-    <TextView
-        android:id="@+id/fragment_employee_item_name_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Employee Name"
-        android:textSize="16sp"
-        android:textColor="?android:attr/textColorPrimary"
-        />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/fragment_employee_item_position_title"
-        android:layout_width="match_parent"
-        android:text="Employee Position"
-        android:textSize="14sp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fragment_employee_item_name_title"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/fragment_employee_item_position_title"
+            android:layout_width="match_parent"
+            android:text="Employee Position"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/fragment_employee_item_name_title"
+            android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/fragment_employee_item_name_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Employee Name"
+            android:textSize="16sp"
+            android:textColor="?android:attr/textColorPrimary"
+            />
+    </RelativeLayout>
+
+</LinearLayout>
